# Braccio_Lemniscate

./: Braccio_controler.py  README.md
base_motors_controlers/: README.md  base_motors_controlers.ino
braccio/: CMakeLists.txt  README.md  architecture_globale.drawio  architecture_logicielle_bras_robot  architecture_logicielle_bras_robot.drawio  package.xml  start.sh
braccio/launch/: Lemniscate.launch  Lemniscate3.launch  Lemniscate_6.launch  README.md  remote_control_test.launch
braccio/moves/jouables/: 1.attrapper_eau  2.4donner_l_eau  3.regard  5.calinbon
braccio/moves/liste_complete/: attraper_eau_maureen  baston  baston 2  calin_1  equi  equi2  equiJoke  mise en secu  mouvement_long
braccio/msg/: egg_angles.msg
braccio/pypot_ressources/: braccio.json
braccio/receiver/: Makefile  README.md  README.txt  receive  receive.cpp  receive6
braccio/scripts/: Braccio_controler.py  Robot_Controller.py  control_test.py  etalon_egg.py  pypot_controler.py  receiver.py
braccio/src/: Command_MUX.cpp  controler_recept.cpp  controler_recept.cpp.save  controler_recept.cpp.save.1  egg_receive.cpp  egg_receive6.cpp  receive.cpp  remote_server.cpp
braccio/srv/: creation.srv
egg_emitters/egg_com_tests/: egg_com_tests.ino
egg_emitters/eggs/: eggs.ino
egg_emitters/eggs_etalon/: eggs_etalon.ino
